nsg.json

{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
  },

  "resources": [
    {
              "comments": "Generalized from resource: networkSecurityGroups/jpdc-dev-vm-nsg",
              "type": "Microsoft.Network/networkSecurityGroups",
              "name": "[parameters('settings').network.devVMmNsg]",
              "apiVersion": "2017-06-01",
              "location": "westus",
              "scale": null,
              "properties": {
                  "provisioningState": "Succeeded",

                  "securityRules": [
                      {
                          "name": "default-allow-rdp",
                          "properties": {
                              "provisioningState": "Succeeded",
                              "protocol": "TCP",
                              "sourcePortRange": "*",
                              "destinationPortRange": "3389",
                              "sourceAddressPrefix": "*",
                              "destinationAddressPrefix": "*",
                              "access": "Allow",
                              "priority": 1000,
                              "direction": "Inbound",
                              "sourceAddressPrefixes": [],
                              "destinationAddressPrefixes": []
                          }
                      },
                      {
                          "name": "DNS-TCP",
                          "properties": {
                              "provisioningState": "Succeeded",
                              "protocol": "TCP",
                              "sourcePortRange": "*",
                              "destinationPortRange": "53",
                              "sourceAddressPrefix": "*",
                              "destinationAddressPrefix": "*",
                              "access": "Allow",
                              "priority": 100,
                              "direction": "Outbound",
                              "sourceAddressPrefixes": [],
                              "destinationAddressPrefixes": []
                          }
                      }
                  ],
                  "defaultSecurityRules": [
                      {
                          "name": "AllowVnetInBound",
                          "properties": {
                              "provisioningState": "Succeeded",
                              "description": "Allow inbound traffic from all VMs in VNET",
                              "protocol": "*",
                              "sourcePortRange": "*",
                              "destinationPortRange": "*",
                              "sourceAddressPrefix": "VirtualNetwork",
                              "destinationAddressPrefix": "VirtualNetwork",
                              "access": "Allow",
                              "priority": 65000,
                              "direction": "Inbound",
                              "sourceAddressPrefixes": [],
                              "destinationAddressPrefixes": []
                          }
                      },

                      {
                          "name": "DenyAllInBound",
                          "properties": {
                              "provisioningState": "Succeeded",
                              "description": "Deny all inbound traffic",
                              "protocol": "*",
                              "sourcePortRange": "*",
                              "destinationPortRange": "*",
                              "sourceAddressPrefix": "*",
                              "destinationAddressPrefix": "*",
                              "access": "Deny",
                              "priority": 65500,
                              "direction": "Inbound",
                              "sourceAddressPrefixes": [],
                              "destinationAddressPrefixes": []
                          }
                      },
                      {
                          "name": "AllowVnetOutBound",
                          "properties": {
                              "provisioningState": "Succeeded",
                              "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                              "protocol": "*",
                              "sourcePortRange": "*",
                              "destinationPortRange": "*",
                              "sourceAddressPrefix": "VirtualNetwork",
                              "destinationAddressPrefix": "VirtualNetwork",
                              "access": "Allow",
                              "priority": 65000,
                              "direction": "Outbound",
                              "sourceAddressPrefixes": [],
                              "destinationAddressPrefixes": []
                          }
                      },
                      {
                          "name": "AllowInternetOutBound",
                          "properties": {
                              "provisioningState": "Succeeded",
                              "description": "Allow outbound traffic from all VMs to Internet",
                              "protocol": "*",
                              "sourcePortRange": "*",
                              "destinationPortRange": "*",
                              "sourceAddressPrefix": "*",
                              "destinationAddressPrefix": "Internet",
                              "access": "Allow",
                              "priority": 65001,
                              "direction": "Outbound",
                              "sourceAddressPrefixes": [],
                              "destinationAddressPrefixes": []
                          }
                      },
                      {
                          "name": "DenyAllOutBound",
                          "properties": {
                              "provisioningState": "Succeeded",
                              "description": "Deny all outbound traffic",
                              "protocol": "*",
                              "sourcePortRange": "*",
                              "destinationPortRange": "*",
                              "sourceAddressPrefix": "*",
                              "destinationAddressPrefix": "*",
                              "access": "Deny",
                              "priority": 65500,
                              "direction": "Outbound",
                              "sourceAddressPrefixes": [],
                              "destinationAddressPrefixes": []
                          }
                      }
                  ]
              },
              "dependsOn": []
          }
  ]
}
